--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
 streamlit
-joblib==1.1.0  # Versi yang digunakan saat menyimpan model
-scikit-learn==1.0.2  # Versi yang digunakan saat menyimpan model
+joblib
+scikit-learn
 numpy
